[java 223] Code quality